made buttons round :)

--- a/news-server/src/main/resources/application.properties
+++ b/news-server/src/main/resources/application.properties
@@ -3,8 +3,8 @@ s3.key.secret=${SECRET}
 s3.bucket.endpoint=${URL}
 s3.bucket.region=${REGION}
 
-spring.data.mongodb.uri=mongodb://localhost:27017/csf
-# spring.data.mongodb.uri=${MONGO_URL}
+# spring.data.mongodb.uri=mongodb://localhost:27017/csf
+spring.data.mongodb.uri=${MONGO_URL}
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
